--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'org.kohsuke:github-api:1.85'
+    annotationProcessor 'org.jenkins-ci:annotation-indexer:1.4'
 }
