--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'idea'
 
 android {
     compileSdkVersion 29
@@ -31,6 +32,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'org.kohsuke:github-api:1.85'
+    api 'org.kohsuke:github-api:1.85'
     annotationProcessor 'org.jenkins-ci:annotation-indexer:1.4'
 }
