--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DataBaseActivity"></activity>
-        <activity android:name=".AboutPage"></activity>
+        <activity android:name=".CategoriesPage"></activity>
+        <activity android:name=".ItemPage" />
+        <activity android:name=".DataBaseActivity" />
+        <activity android:name=".AboutPage" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
