--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'org.kohsuke:github-api:1.85'
+    implementation 'org.kohsuke:github-api:1.95'
     annotationProcessor 'org.jenkins-ci:annotation-indexer:1.4'
+    implementation 'org.eclipse.mylyn.github:org.eclipse.egit.github.core:2.1.5'
+    implementation 'com.android.volley:volley:1.1.1'
 }
