--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,7 @@ dependencies {
     annotationProcessor 'org.jenkins-ci:annotation-indexer:1.4'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.android.volley:volley:1.1.1'
+
 
 }
