--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.android.volley:volley:1.1.1'
-
+    implementation 'com.google.firebase:firebase-analytics:17.2.0' //firebase/firestore
 
 }
+
+apply plugin: 'com.google.gms.google-services'      //firebase / firestore
