--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'idea'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "28.0.3"
+    buildToolsVersion '29.0.2'
     defaultConfig {
         applicationId "com.example.greenroutine"
         minSdkVersion 26
