--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
-apply plugin: 'com.android.application'
-apply plugin: 'idea'
-
+plugins {
+    id 'com.android.application'
+    id 'idea'
+}
 android {
     compileSdkVersion 29
     buildToolsVersion "28.0.3"
