--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         google()
@@ -15,6 +14,10 @@ buildscript {
     }
 }
 
+plugins {
+    id 'com.gradle.build-scan' version '2.1'
+}
+
 allprojects {
     repositories {
         google()
@@ -26,3 +29,17 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+buildScan {
+    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+    termsOfServiceAgree = 'yes'
+}
+
+tasks.register("complie") {
+    group = 'Custom'
+    description = 'Assembles and tests the application'
+    doLast {
+        println 'uwu'
+    }
+}
+tasks.getByName("complie").dependsOn(tasks.getByName("complie"))
