--- a/build.gradle
+++ b/build.gradle
@@ -37,11 +37,19 @@ buildScan {
     termsOfServiceAgree = 'yes'
 }
 
-tasks.register("complie") {
+tasks.register("createAPI") {
     group = 'Custom'
-    description = 'Assembles and tests the application'
+    description = 'Creates the API script'
     doLast {
-        println 'uwu'
+        def keyFile = new File( new File( "." ).getCanonicalPath() + "/app/src/main/res/values/keys.xml")
+        keyFile.delete();
+        if(keyFile.exists()){
+            println("File already exists, delete and re-run to replace the file.");
+        }else {
+            println("No file found, creating new keys.xml");
+            keyFile.createNewFile();
+            keyFile.write "<resources>\n    <string name=\"earth911\">test</string>\n    <string name=\"googleMaps\">test</string>\n    <string name=\"fireBaseFireStore\">test</string>\n</resources>"
+        }
+        println(System.getenv("secrets.TESTING"))
     }
 }
-tasks.getByName("complie").dependsOn(tasks.getByName("complie"))
