--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.2.0'
     implementation 'com.google.firebase:firebase-firestore:21.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.0' //firebase/firestore
-
-
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'      //firebase / firestore
