--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.android.volley:volley:1.1.1'
-
-
+    implementation 'org.json:json:20190722'
 }
