--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'org.json:json:20190722'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
 }
