--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.0' //firebase/firestore
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
-
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.0'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-web:3.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'      //firebase / firestore
